<resources>
    <string name="app_name">PROMOB</string>
    <string name="button_send">Send</string>
    <string name="button_compet">Competition</string>
    <string name="button_game4">Pong Ball</string>
    <string name="button_game5">Juste Prix</string>
    <string name="button_game6">Game 6</string>
    <string name="button_multiplayer">MULTIPLAYER</string>
    <string name="button_one_player">Solo</string>
    <string name="button_setting_description">Button setting</string>
    <string name="button_training">Training</string>
    <string name="edit_user1">Player 1</string>
    <string name="memory_name">Memory</string>
    <string name="activity_game_question1">Question</string>
    <string name="activity_game_question2">Question2</string>
    <string name="activity_game_question3">Question3</string>
    <string name="button_classement">Ranking</string>
    <string name="button_quizz">Quizz</string>
    <string name="button_memory">Memory</string>
    <string name="escape_name">Escape</string>
    <string name="edit_user2">Player 2</string>
    <string name="button_solo_classement">Solo ranking</string>
    <string name="button_multi_classement">Multiplayer ranking</string>
    <string name="button_next">Next</string>
    <string name="button_joueur2">Player 2</string>
    <string name="Text_SaisirNombre">Enter a number between 1 and 100</string>
    <string name="Button_compare">Compare</string>
    <string name="ResaisirJustePrixPlusGrand">Enter a higher number again</string>
    <string name="ResaisirJustePrixPlusPetit">Enter a lower number again</string>
    <string name="Text_EstimerLePrix">Estimate the price of this object</string>
</resources>
