<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/starbackground"
    tools:context=".TrainingActivity">

    <Button
        android:id="@+id/memorybutton"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginTop="24dp"
        android:onClick="OnclickMemory"
        android:text="@string/button_memory"
        android:textColor="#FFD100"
        android:textSize="@dimen/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzbutton" />

    <Button
        android:id="@+id/escapebutton"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginTop="24dp"
        android:onClick="OnclickEscape"
        android:textColor="#FFD100"
        android:textSize="@dimen/titre"
        android:text="@string/escape_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memorybutton" />

    <Button
        android:id="@+id/pongballbutton"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginTop="24dp"
        android:onClick="OnclickPong"
        android:textColor="#FFD100"
        android:textSize="@dimen/titre"
        android:text="@string/button_game4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/escapebutton" />

    <Button
        android:id="@+id/justeprixbutton"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginTop="24dp"
        android:onClick="OnclickJustePrix"
        android:textColor="#FFD100"
        android:textSize="@dimen/titre"
        android:text="@string/button_game5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pongballbutton" />

    <Button
        android:id="@+id/quizzbutton"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="200dp"
        android:onClick="OnclickQuizz"
        android:text="@string/button_quizz"
        android:textColor="#FFD100"
        android:textSize="@dimen/titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>