<?xml version="1.0" encoding="utf-8"?>
<com.martin.promob.ClassementSlider xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classementslider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toHide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonclassement2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="showClassement"
            android:text="@string/button_classement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/soloclassement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="15dp"
            android:onClick="soloRanking"
            android:text="@string/button_solo_classement" />

        <Button
            android:id="@+id/multiclassement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="49dp"
            android:layout_toEndOf="@+id/soloclassement"
            android:onClick="multiRanking"
            android:text="@string/button_multi_classement" />

        <ScrollView
            android:id="@+id/scroll_view_classement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playerclassement_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settingButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_setting_description"
            android:background="#ffffff"
            android:scaleType="centerInside"
            android:src="@drawable/setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/onePlayerButton"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:onClick="onePlayer"
            android:text="@string/button_one_player"
            android:textStyle="bold"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/multiplayerButton"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:onClick="multiPlayer"
            android:text="@string/button_multiplayer"
            android:textStyle="bold"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onePlayerButton" />

        <Button
            android:id="@+id/buttonclassement"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="showClassement"
            android:text="@string/button_classement"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.martin.promob.ClassementSlider>

